package com.taobao.teaey.protobuf;

option optimize_for = SPEED;
option java_generic_services = true;

message Login_C2S {

}

message Login_S2C {

}

service CommonService {
    rpc login (Login_C2S) returns (Login_S2C);
}